# svcv4-model

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: cspec-interop.md  glossary.md  index.md
docs/concepts/: case-model.md  classification-vs-method-model.md  statement-and-proposition.md  va-spec-community-profile.md
docs/examples/: index.md
docs/getting-started/: assertion-framework.md  evidence-lines-and-items.md  first-case.md  show-your-work.md
docs/model/: index.md
docs/overview/: alignment.md  scope.md  svcv4-in-brief.md
docs/plans/: 2026-05-19-initial-scaffold.md
docs/reference/: contributing.md  credits.md  cspec-interop.md  gks-interop.md  glossary.md  model.md  schemas.md  summary-table.md  va-spec-profile.md
docs/workflows/: case-model.md  clinical-observations.md  cln-aff.md  cln-alt.md  cln-altg.md  cln-altv.md  cln-dnv.md  cln-uaf.md  human-observational-data.md  index.md  pop-loc.md  variant-impact.md
examples/: README.md  classification-example-01.json
overrides/: main.html
schemas/applicability/: case_applicability.yaml
schemas/json/: AdditionalVariant.schema.json  Age.schema.json  Case.schema.json  CaseProbandInfo.schema.json  CaseRelative.schema.json  CaseTesting.schema.json  CaseVariant.schema.json  CompoundHetVariant.schema.json  EvidenceItem.schema.json  EvidenceLine.schema.json  Gene.schema.json  MDE.schema.json  Method.schema.json  Phenotype.schema.json  Proposition.schema.json  Statement.schema.json  VBC.schema.json  WorkflowParameters.schema.json
scripts/: __init__.py  export_case_views.py  export_schemas.py  validate_examples.py
src/svcv4_model/: __init__.py  case.py  case_applicability.py  classification.py  evidence_item.py  evidence_line.py  gks.py  inputs.py  method.py  proposition.py  statement.py
tests/: test_case.py  test_case_applicability.py  test_case_views.py  test_examples.py  test_model.py
(+23 files in other folders)
